# llm-group-voice-chat

./: .gitignore  Makefile  README.md  docker-compose.yaml
FasterLivePortrait/: Dockerfile  README.md  api_v2.py  gen.sh  logs.sh  run.sh  stop.sh
TTS/: Dockerfile  README.md  api.py  docker-compose.yml  requirements.txt  test_main.py  voices.yaml
TTS/app/: accents.py  audio_utils.py  config.py  download.py  logging.py  main.py  tts_pipeline.py  voices.py
chat/: README.md  app.py  autogen_engine.py  config.py  conversation.py  events.py  main.py  media.py  pyproject.toml  state.py
chat/config/: app.sample.yaml  scene.sample.yaml
chat/static/css/: style.css
chat/static/js/: app.js
chat/templates/: index.html
